--- a/Porgetto_Sad.Rmd
+++ b/Porgetto_Sad.Rmd
@@ -272,9 +272,10 @@ dell'intero set di dati.
 
 ### Year
 
-La variabile year del dataset mpg rappresenta l'anno di produzione del
-veicolo. Si tratta di una variabile quantitativa discreta, in quanto i
-valori possibili sono limitati e non possono assumere valori intermedi.
+Year indica l'anno di produzione dell'automobile. La variabile year del
+dataset mpg rappresenta l'anno di produzione del veicolo. Si tratta di
+una variabile quantitativa discreta, in quanto i valori possibili sono
+limitati e non possono assumere valori intermedi.
 
 ```{r}
 df <- data.frame(Freq =
