--- a/Porgetto_Sad.Rmd
+++ b/Porgetto_Sad.Rmd
@@ -494,7 +494,7 @@ percentuale di osservazioni per un determinato livello o valore univoco
 della variabile.
 
 ```{r}
-Manufacturer <- factor(mpg$manufacturer, ordered = T)
+Manufacturer <- factor(mpg$manufacturer, levels = names(sort(table(mpg$manufacturer))))
 p2 <- ggplot(mpg, aes(x = "", y = manufacturer, fill = Manufacturer)) +
   geom_bar(width = 1, stat = "identity") +
   coord_polar("y") + theme_void()
@@ -657,101 +657,58 @@ il consumo di carburante in città.
 
 ### Variabile Year
 
-Year indica l'anno di produzione dell'automobile
-
-Innanzitutto applichiamo la funzione **`summary()`** per ottenere un
-riassunto delle statistiche di base per la variabile **`Year`**, come ad
-esempio la media, la mediana, il minimo e il massimo.
+Year indica l'anno di produzione dell'automobile. Innanzitutto
+applichiamo la funzione **`summary()`** per ottenere un riassunto delle
+statistiche di base per la variabile **`Year`**, come ad esempio la
+media, la mediana, il minimo e il massimo.
 
 ```{r}
 summary(mpg$year)
 
 ```
 
-Nel chunk successivo applichiamo la funzione **`hist()`** per creare un
-istogramma della variabile **`Year`**. L'istogramma ci aiuterà a
-visualizzare la distribuzione dei valori della variabile e a
-identificare eventuali outlier.
+L'auto più vecchia del dataset è del 1999, mentre la più recente è del
+2008. Questo ci fa capire che le auto prese in esame sono modelli molto
+vecchi rispetto a quelli attuali.
+
+#### Istogramma
+
+Nel chunk successivo applichiamo la funzione **`geom_histogram`**,
+l'equivalente di **`hist()`**, per creare un istogramma della variabile
+**`Year`**. L'istogramma ci aiuterà a visualizzare la distribuzione dei
+valori della variabile e a identificare eventuali outlier.
 
 ```{r}
-hist(mpg$year)
+p8 <- ggplot(mpg, aes(x = year)) + geom_histogram(bins = 30, aes(y = ..density..), color = "black", fill = "white")
+p8 <- p8 + theme(panel.background = element_rect(fill = '#f0e2a8', color = '#9a8262'), 
+               panel.grid.major = element_line(color = '#fff68f', linetype = 'longdash'),
+               panel.grid.minor = element_line(color = '#fff68f', size = 0.7,linetype = "dotdash")) 
 
+p8
 ```
+
+Da questo grafico capiamo che gli anni di produzione sono solo 2, il
+1999 e il 2008. Quindi sono presenti due generazioni di veicoli, alcuni
+prodotti alla fine del 20esimo secolo e altri all'inizio del 21 secolo,
+discostanti da loro di 10 anni.
+
+#### Boxplot
 
 Con la funzione **`boxplot()`** creiamo un grafico a scatola a baffi
 della variabile **`Year`**.
 
 ```{r}
-boxplot(mpg$year)
+p7 <- ggplot(mpg, aes(x = year)) + geom_boxplot() + coord_flip()
+p7 <- p7 + theme(panel.background = element_rect(fill = '#f0e2a8', color = '#9a8262'), 
+               panel.grid.major = element_line(color = '#fff68f', linetype = 'longdash'),
+               panel.grid.minor = element_line(color = '#fff68f', size = 0.7,linetype = "dotdash")) 
 
+p7
 ```
 
-Osservando la funzione **`table()`** notiamo che il numero di
-osservazioni per ogni valore della variabile **`Year`** è lo stesso
-infatti: 117 osservazioni sono state rilevate nel 1999 e altrettante 117
-nel 2008.
-
-```{r}
-table(mpg$year)
-
-```
-
-Utilizzando la funzione **`quantile()`** otteniamo i quantili specifici
-della distribuzione dei valori della variabile **`Year`**. Avremo il
-primo quantile (25%), il secondo quantile (50%), il terzo quantile (75%)
-e il quarto quantile (100%) utilizzando i seguenti comandi:
-
-```{r}
-quantile(mpg$year, probs = c(0, 0.25, 0.5, 0.75, 1))
-
-```
-
-Applichiamo la funzione **`var()`** per calcolare la varianza dei valori
-della variabile **`Year`**. La varianza misura la dispersione dei valori
-intorno alla media.
-
-```{r}
-var(mpg$year)
-
-```
-
-Inoltre applicando la funzione **`sd()`** calcoliamo la deviazione
-standard dei valori della variabile **`Year`**. La deviazione standard è
-una misura della dispersione dei valori intorno alla media, ed è il
-radice quadrata della varianza.
-
-```{r}
-sd(mpg$year)
-
-```
-
-La funzione **`cor()`** calcola il coefficiente di correlazione tra la
-variabile **`Year`** e un'altra variabile del dataset **`mpg`**. Ad
-esempio, abbiamo calcolato il coefficiente di correlazione tra la
-variabile **`Year`** e la variabile **`hwy`** (consumi di carburante):
-
-```{r}
-cor(mpg$year, mpg$hwy)
-
-```
-
-Il coefficiente di correlazione sarà un valore compreso tra -1 e 1, dove
-un valore vicino a 1 indica una forte correlazione positiva, un valore
-vicino a -1 indica una forte correlazione negativa, e un valore vicino a
-0 indica una scarsa correlazione.
-
-Infine, abbiamo usato le funzioni di visualizzazione come **`ggplot()`**
-del pacchetto **`ggplot2`** per creare grafici che mostrino le relazioni
-tra la variabile **`Year`** e altre variabili del dataset **`mpg`**. Ad
-esempio, abbiamo generato un grafico a dispersione (scatterplot) che
-mostri la relazione tra la variabile **`Year`** e la variabile **`hwy`**
-(consumi di carburante).
-
-```{r}
-ggplot(data = mpg) +
-  geom_point(mapping = aes(x = year, y = hwy))
-
-```
+Il boxplot in questo caso appare anomalo, perché non ha i baffi, questo
+perché il primo quartile corrisponde al minimo e il terzo quartile
+corrisponde al massimo.
 
 ### Variabile Cyl
 
@@ -759,58 +716,60 @@ La variabile **`cyl`** del dataset **`mpg`** rappresenta il numero di
 cilindri del motore dei veicoli. Si tratta di una variabile categoriale,
 in quanto i valori possibili sono discreti e limitati.
 
-Per effettuare l'analisi della variabile **`cyl`**, è possibile
-includere il calcolo di statistiche di base come la media, la mediana,
-la varianza e la deviazione standard.
+#### Barplot
 
-```{r}
-data.frame(media = mean(mpg$cyl),mediana = median(mpg$cyl),varianza =  var(mpg$cyl),sd = sd(mpg$cyl))
-```
-
-Nel seguente chunk abbiamo creato un istogramma per visualizzare la
+Nel seguente chunk abbiamo creato un grafico a barre per visualizzare la
 distribuzione dei valori.
 
 ```{r}
-p <- ggplot(data = mpg, mapping = aes(cyl)) + geom_bar(fill= c("#d62d20", "#ffa700", "#008744","#0057e7")) + ggtitle("Variabile cyl")
+p9 <- ggplot(data = mpg, mapping = aes(cyl)) + geom_bar(stat = "count", fill= c("#d62d20", "#ffa700", "#008744","#0057e7")) + ggtitle("Variabile cyl")
 
-p <- p + theme(panel.background = element_rect(fill = '#f0e2a8', color = "#9a8262"), panel.grid.major = element_line(color = '#ffffff', linetype="longdash"),panel.grid.minor = element_line(color = '#fff68f', size = 0.7,linetype = "dotdash"))
+p9 <- p9 + theme(panel.background = element_rect(fill = '#f0e2a8', color = "#9a8262"), panel.grid.major = element_line(color = '#ffffff', linetype="longdash"),panel.grid.minor = element_line(color = '#fff68f', size = 0.7,linetype = "dotdash"))
 
-p
+p9
 
 ```
 
-Usando le funzioni di tabellazione del pacchetto **`tidyverse`** è
-possibile generare tabelle di frequenza che mostrino il numero o la
-percentuale di osservazioni per ogni valore della variabile **`cyl`**.
+Nel grafico, "cyl" sarà mostrata sull'asse delle ascisse e il numero di
+osservazioni per ogni valore sarà mostrato sull'asse delle ordinate.
 
-Ad esempio abbiamo creato una tabella di frequenza per la percentuale di
-osservazioni per ogni numero di cilindri utilizzando il seguente codice:
+Il grafico a barre mostra che ci sono molte più macchine con un numero
+di cilindri pari a 4 rispetto a vetture con un numero di cilindri pari a
+5 o 8.
+
+#### Grafico a torta
+
+Utilizziamo un grafico a torta per mostrare le frequenze di ogni valore
+di "cyl" come percentuali dell'intero dataset.
+
+Per avere un grafico a torta corretto, bisogna prima trasformare la
+variabile cyl in un fattore e riordina i valori in base alla frequenza,
 
 ```{r}
-mpg %>%
-  group_by(cyl) %>%
-  summarize(freq = n()) %>%
-  mutate(perc_freq = round((percent = freq / sum(freq)*100),0))
-
+Cilindri <- factor(mpg$cyl, levels = names(sort(table(mpg$cyl))))
 ```
 
-Osservando il table possiamo affermare che il 35% dei veicoli ha il
-motore a 4 cilindri, il 34% a 6 cilindri, il 30% a 8 ed infine il 2% ha
-5 cilindri nel motore.
-
-Usando le funzioni di tabellazione del pacchetto **`tidyverse`** inoltre
-è possibile anche creare tabelle incrociate che mostrino il numero o la
-percentuale di osservazioni per ogni combinazione di valori di due o più
-variabili. Ad esempio, abbiamo generato una tabella incrociata che
-mostri il numero di osservazioni per ogni combinazione di numero di
-cilindri e tipo di cambio (automatico o manuale) utilizzando il seguente
-codice:
+In questo modo, i valori di "Cilindri" verranno ordinati in base alla
+frequenza, dal valore più frequente al meno frequente
 
 ```{r}
-mpg %>%
-  count(cyl, trans)
+
+p10 <- ggplot(mpg, aes(x = "", y = Cilindri, fill = Cilindri)) +
+  geom_bar(width = 1,stat = "identity") +
+  coord_polar("y") + theme_void()
+
+p10 <- p10 + theme(panel.background = element_rect(fill = '#f0e2a8', color = '#9a8262'), 
+               panel.grid.major = element_line(color = '#f0e2a8', linetype = 'longdash'),
+               panel.grid.minor = element_line(color = '#fff68f', size = 0.7,linetype = "dotdash")) 
+
+p10
 
 ```
+
+Il grafico a torta ci da una conferma di quello che avevamo già visto
+nel grafico a barre, la presenza di veicoli a 4 cilindri è superiore
+alle altre. In sostanza il dataset è formato quasi interamente da
+veicoli a 4 e 6 cilindri.
 
 ### Variabile trans
 
